<resources>
    <string name="app_name">石油一点通</string>
    <!-- Strings related to login -->
    <string name="prompt_account">账号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_register">密码(不少于六位)</string>
    <string name="prompt_confirm_password">确认密码</string>
    <string name="prompt_remember_password">记住密码?</string>
    <string name="prompt_register_now"><![CDATA[立即注册>]]></string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>


    <string name="title_login">登录</string>
    <string name="title_home">主页</string>
    <string name="title_register">注册</string>


    <string name="error_null_username">用户名为空</string>
    <string name="error_short_password">密码不足六位</string>
    <string name="error_diff_password">密码不一致</string>

</resources>
